# Agentic_AI

01_ai_agents_first/01_uv/01_project/explore-uv/: pyproject.toml
01_ai_agents_first/01_uv/01_project/explore-uv/src/explore_uv/: hello.py
01_ai_agents_first/01_uv/uv-project2/: pyproject.toml
01_ai_agents_first/01_uv/uv-project2/src/uv_project2/: main.py
01_ai_agents_first/02_openrouter/: OpenRouter_AI_Agents_SDK.ipynb
01_ai_agents_first/02_openrouter/OpenRouter_Ai_agent_sdk/: main.py  pyproject.toml
01_ai_agents_first/03_litellm_openai_agent/01_litellm/myproject/: pyproject.toml
01_ai_agents_first/03_litellm_openai_agent/01_litellm/myproject/src/myproject/: hello.py
01_ai_agents_first/03_litellm_openai_agent/02_uv_litellm_chainlite/chatbot/: chat_history.json  main.py  pyproject.toml
01_ai_agents_first/03_litellm_openai_agent/03_Litellm_agent_sdk/: async.py  pyproject.toml  run_sync.py
01_ai_agents_first/04_hello_agent/agent_level/: main.py  pyproject.toml
01_ai_agents_first/04_hello_agent/global_levrl/: main.py  pyproject.toml
01_ai_agents_first/04_hello_agent/run_level/: main.py  pyproject.toml
